--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -91,7 +91,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                             <a class="dropdown-item" style="text-transform: none" href={% url 'products:paper-tube-list' %}>
-                                Paper Core
+                                Paper Tube
                             </a>
 
                             <a class="dropdown-item" style="text-transform: none" href={% url 'products:plastic-pipe-list' %}> Plastic Pipe</a>
@@ -345,11 +345,43 @@
                 </div>
 
                 <div class=" order-2 order-md-3">
-                    <form method="POST" class = "form-horizontal" style="background-color:#F9F9F9;" id="form_order">
+                    <form method="POST" class = "form-horizontal pt-4" style="background-color:#F9F9F9;" id="form_order">
                         {% csrf_token %}
                         <div class="form-row" style="margin: 0 !important;" >
                         
-                            <div class="col-md-6 mb-3 pt-5 col-9 pl-3" style="box-sizing: border-box" >
+                            <div class="col-md-6 mb-3 px-3">
+                                <input type="text" class="form-control rounded inputstl" id="name" name ="name" placeholder="Your Name:" required>
+                            </div>
+
+                            <div class="col-md-6 mb-3 px-3">
+                                <input class="form-control rounded inputstl" type="email" name="email" placeholder="Your Email:">
+                            </div>
+    
+                            <div class="col-md-6 mb-3 px-3">
+                                <input type="text" class="form-control rounded inputstl" id="phone" name ="phone" placeholder="Your Phone Number:" >
+                            </div>
+
+                            <div class="col-md-6 d-none d-md-block mb-3 px-3"></div>
+                             
+                            <div class="col-md-3 mb-3 px-3"> 
+                                <input type="number" step="0.01" class="form-control rounded inputstl" id="inner_diameter" name ="inner_diameter" placeholder="Inner Diameter:" >
+                            </div>
+
+                            <div class="col-md-3 mb-3 px-3">
+                                <input type="number" step="0.01" class="form-control rounded inputstl" id="thickness" name ="thickness" placeholder="Thickness:" >
+                            </div>
+
+                            <div class="col-md-3 mb-3 px-3">
+                                <input type="number" step="0.01" class="form-control rounded inputstl" id="length" name ="length" placeholder="Length:" >
+                            </div>
+
+                            <div class="col-md-3 mb-3 px-3">
+                                <input type="number" class="form-control rounded inputstl" id="quantity" name ="quantity" placeholder="Quantity:" >
+                            </div>
+                            
+
+                            
+                            <div class="col-md-6 mb-3 pt-4 pt-md-3  col-9 pl-3" style="box-sizing: border-box" >
                                 Material Type:
                                 <select style="width:80px" name="material" id="material" required >
                                     {% for material in materials %}
@@ -358,43 +390,12 @@
                                     
                                 </select>
                             </div>
-                            <div class="col-md-6 mb-3 pt-md-5 pt-3 pl-3">
+                            <div class="col-md-6 mb-3 pt-md-3 pt-4 pl-3">
                                Your LOGO:
-                               <input class="col-9" type="file" id="logo" name ="logo">
+                               <input class="col-8" type="file" id="logo" name ="logo">
                             </div>
-                             
-                            <div class="col-md-6 mb-3 px-3">
-                                
-                                <input type="number" step="0.01" class="form-control rounded inputstl" id="inner_diameter" name ="inner_diameter" placeholder="Inner Diameter:" >
-                            </div>
-                            <div class="col-md-6 mb-3 px-3">
-                                
-                                <input type="number" step="0.01" class="form-control rounded inputstl" id="thickness" name ="thickness" placeholder="Thickness:" >
-                            </div>
-                            <div class="col-md-6 mb-3 px-3">
-                                
-                                <input type="number" step="0.01" class="form-control rounded inputstl" id="length" name ="length" placeholder="Length:" >
-                            </div>
-                            <div class="col-md-6 mb-3 px-3">
-                                
-                                <input type="number" class="form-control rounded inputstl" id="quantity" name ="quantity" placeholder="Quantity:" >
-                            </div>
-                            
-    
-                            <div class="col-md-6 mb-3 px-3">
-                                
-                                <input type="text" class="form-control rounded inputstl" id="name" name ="name" placeholder="Your Name:" required>
-                            </div>
-                            <div class="col-md-6 mb-3 px-3">
-                                
-                                <input class="form-control rounded inputstl" type="email" name="email" placeholder="Your Email:">
-                            </div>
-    
-                            <div class="col-md-6 mb-3 px-3">
-                                
-                                <input type="text" class="form-control rounded inputstl" id="phone" name ="phone" placeholder="Your Phone Number:" >
-                            </div> 
                         </div>
+
                         <div class="text-center mb-3 px-3">
                             <button type="submit" class="col-md-3 mb-3 btn btn-success rounded" style="text-transform: none; font-weight: 500;">Get a quote!</button> 
                         </div>
@@ -501,7 +502,7 @@
     <div class="py-3"></div>
 </main>
 <footer>
-    <div class="top py-5 ">
+    <div class="top py-5">
         <div class="container">
             <div class="row fonteFoter">
 
@@ -521,10 +522,10 @@
                         </li>
 
                         <li class="nav-item col-4 pl-md-0">
-                            <a class="nav-link" href="#">Contact Us</a>
+                            <a class="nav-link" href="{% url 'pages:contact' %}">Contact Us</a>
                         </li>
 
-                        <li class="col-md-6 mt-3 mt-md-0 pl-md-0">
+                        <li class="col-md-10 col-lg-6 mt-3 mt-md-0 pl-md-0">
                             <a href="https://www.flandersinvestmentandtrade.com/en" target="_blank">
                                 <img src="../static/assets/img/fsc-1.png" alt=""/>
                             </a>
@@ -534,7 +535,7 @@
                 
 
                 <div class="col-12 col-md-5">
-                    <div class="col-sm-6 text-center mx-auto">
+                    <div class="col-sm-6 col-md-8 col-lg-6  text-center mx-auto">
                         <h3 class="text-info">Contact Us</h3>
                         <ul class="nav flex-column">
                             <li class="nav-item pb-1">
