--- a/templates/pages/our-story.html
+++ b/templates/pages/our-story.html
@@ -87,7 +87,7 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                 <a class="dropdown-item" style="text-transform: none" href={% url 'products:paper-tube-list' %}>
-                                    Paper Core
+                                    Paper Tube
                                 </a>
     
                                 <a class="dropdown-item" style="text-transform: none" href={% url 'products:plastic-pipe-list' %}> Plastic Pipe</a>
@@ -131,7 +131,7 @@
                 {{ category.short_description }}
             </p>
         {% else %}
-            <h1 class="display-4 mb-3 pb-3 pt-3 py-lg-0">OUR PRODUCTS</h1>
+            <h1 class="display-4 mb-3 pb-3 pt-3 py-lg-0">OUR STORY</h1>
             <p>
                 From metal and plastic to paper and textiles. Different manufacturing processes set different demands.
                 We adapt strength, paper quality, inner measurements and material thicknesses down to the exact
@@ -201,10 +201,10 @@
                         </li>
 
                         <li class="nav-item col-4 pl-md-0">
-                            <a class="nav-link" href="#">Contact Us</a>
+                            <a class="nav-link" href="{% url 'pages:contact' %}">Contact Us</a>
                         </li>
 
-                        <li class="col-md-6 mt-3 mt-md-0 pl-md-0">
+                        <li class="col-md-10 col-lg-6 mt-3 mt-md-0 pl-md-0">
                             <a href="https://www.flandersinvestmentandtrade.com/en" target="_blank">
                                 <img src="../static/assets/img/fsc-1.png" alt=""/>
                             </a>
@@ -214,7 +214,7 @@
                 
 
                 <div class="col-12 col-md-5">
-                    <div class="col-sm-6 text-center mx-auto">
+                    <div class="col-sm-6 col-md-8 col-lg-6  text-center mx-auto">
                         <h3 class="text-info">Contact Us</h3>
                         <ul class="nav flex-column">
                             <li class="nav-item pb-1">
