--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -250,10 +250,10 @@
                         </li>
 
                         <li class="nav-item col-4 pl-md-0">
-                            <a class="nav-link" href="#">Contact Us</a>
+                            <a class="nav-link" href="{% url 'pages:contact' %}">Contact Us</a>
                         </li>
 
-                        <li class="col-md-6 mt-3 mt-md-0 pl-md-0">
+                        <li class="col-md-10 col-lg-6 mt-3 mt-md-0 pl-md-0">
                             <a href="https://www.flandersinvestmentandtrade.com/en" target="_blank">
                                 <img src="../static/assets/img/fsc-1.png" alt=""/>
                             </a>
@@ -263,7 +263,7 @@
                 
 
                 <div class="col-12 col-md-5">
-                    <div class="col-sm-6 text-center mx-auto">
+                    <div class="col-sm-6 col-md-8 col-lg-6  text-center mx-auto">
                         <h3 class="text-info">Contact Us</h3>
                         <ul class="nav flex-column">
                             <li class="nav-item pb-1">
