--- a/templates/pages/plastic_pipe.html
+++ b/templates/pages/plastic_pipe.html
@@ -88,12 +88,12 @@
                             Products
                         </a>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" href={% url 'products:paper-tube-list' %}>
-                                paper tube
+                            <a class="dropdown-item" style="text-transform: none" href={% url 'products:paper-tube-list' %}>
+                                Paper Tube
                             </a>
 
-                            <a class="dropdown-item active" href={% url 'products:plastic-pipe-list' %}> Plastic Pipe</a>
-                            <a class="dropdown-item" href={% url 'products:metalic-pipe-list' %}> Metallic Pipe</a>
+                            <a class="dropdown-item active" style="text-transform: none" href={% url 'products:plastic-pipe-list' %}> Plastic Pipe</a>
+                            <a class="dropdown-item" style="text-transform: none" href={% url 'products:metalic-pipe-list' %}> Metallic Pipe</a>
                         </div>
                     </div>
                 </li>
@@ -118,7 +118,7 @@
                     <p><i class="fas fa-angle-right"></i></p>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="{% url 'pages:about' %}">Our Story</a>
+                    <a class="nav-link active" href="{% url 'pages:about' %}">Plastic Pipe</a>
                 </li>
             </ul>
         </div>
@@ -155,9 +155,9 @@
     </section>
     <section class="py-5">
         <div class="container">
-            <div class="row">
+            <div class="row d-flex justify-items-between">
                 {% for product in products %}
-                    <div class="col-md-6 col-lg-4 py-4">
+                    <div class="col-md-6 col-lg-4 py-4 d-flex flex-column justify-content-between">
                         {#                            <div class="slideshow-container">#}
                         {#                                {% for image in product.images.all %}#}
                         {#                                    <div class="mySlides fade">#}
@@ -168,17 +168,17 @@
                         {#                            </div>#}
                         {#                            <br>#}
 
-                        <div id="carouselControls" class="carousel slide" data-ride="carousel" data-interval="10000">
-                            <div class="carousel-inner">
+                        <div id="carouselControls" class="carousel slide d-flex bg-light rounded" data-ride="carousel" data-interval="10000">
+                            <div class="carousel-inner d-flex align-items-center">
                                 
                               <div class="carousel-item active">
-                                <img class="img-fluid mb-3" alt="{{ product.title }}"
+                                <img class="img-fluid" alt="{{ product.title }}"
                                         src="{{ product.images.first.image.url }}"/>
                               </div>
                               {% for image in product.images.all %}
                               {% if image != product.images.first %}
                               <div class="carousel-item">
-                                <img class="img-fluid  mb-3" alt="{{ product.title }}" src="{{ image.image.url }}">
+                                <img class="img-fluid" alt="{{ product.title }}" src="{{ image.image.url }}">
                               </div>
                               {% endif %}
                               {% endfor %}
@@ -209,10 +209,8 @@
         </div>
     </section>
     <div class="py-3"></div>
-    <section class="text-center py-5">
-        <a class="u btn-success text-center mx-auto">
-            Learn more about our Products!
-        </a>
+    <section class="text-center  mx-4 mx-md-0">
+        <button type="submit" class="col-lg-4 col-md-6 mb-3 btn btn-success rounded" style="text-transform: none; font-weight: 500;">Learn more about our Products!</button> 
     </section>
     <div class="py-5"></div>
 </main>
@@ -237,10 +235,10 @@
                         </li>
 
                         <li class="nav-item col-4 pl-md-0">
-                            <a class="nav-link" href="#">Contact Us</a>
+                            <a class="nav-link" href="{% url 'pages:contact' %}">Contact Us</a>
                         </li>
 
-                        <li class="col-md-6 mt-3 mt-md-0 pl-md-0">
+                        <li class="col-md-10 col-lg-6 mt-3 mt-md-0 pl-md-0">
                             <a href="https://www.flandersinvestmentandtrade.com/en" target="_blank">
                                 <img src="../../static/assets/img/fsc-1.png" alt=""/>
                             </a>
@@ -250,7 +248,7 @@
                 
 
                 <div class="col-12 col-md-5">
-                    <div class="col-sm-6 text-center mx-auto">
+                    <div class="col-sm-6 col-md-8 col-lg-6  text-center mx-auto">
                         <h3 class="text-info">Contact Us</h3>
                         <ul class="nav flex-column">
                             <li class="nav-item pb-1">
