--- a/templates/pages/products.html
+++ b/templates/pages/products.html
@@ -243,7 +243,7 @@
                             <a class="nav-link" href="{% url 'products:metalic-pipe-list' %}">Our Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact Us</a>
+                            <a class="nav-link" href="{% url 'pages:contact' %}">Contact Us</a>
                         </li>
                         </br>
                         <li class="col-md-6">
