allpage and admin, respansive and changelist

--- a/templates/pages/our-story.html
+++ b/templates/pages/our-story.html
@@ -205,7 +205,7 @@
                         </li>
 
                         <li class="col-md-10 col-lg-6 mt-3 mt-md-0 pl-md-0">
-                            <a href="https://www.flandersinvestmentandtrade.com/en" target="_blank">
+                            <a href="https://fsc.org/en" target="_blank">
                                 <img src="../static/assets/img/fsc-1.png" alt=""/>
                             </a>
                         </li>
@@ -265,7 +265,7 @@
                                     </a>
                                 </li>
                                 <li class="list-unstyled-item" style="height:48px;">
-                                    <a href="https://www.instagram.com/p/CXyaJw2Ihio/?utm_medium=share_sheet" style="color: #c69214;">
+                                    <a href="https://www.instagram.com/intopipe/" style="color: #c69214;">
                                         <i class="fab fa-instagram fa-2x"></i>
                                     </a>
                                 </li>
