--- a/templates/pages/plastic_pipe.html
+++ b/templates/pages/plastic_pipe.html
@@ -125,7 +125,7 @@
     </div>
 </section>
 <div
-        class="jumbotron in-page banner-3 banner-top text-center uppercase flex"
+        class="jumbotron in-page banner-8 banner-top text-center uppercase flex"
 >
     <div class="container ">
         <h1 class="display-4 mb-3 pb-3 pt-3 py-lg-0">{{ categorytitle }}{{ category.title }}</h1>
@@ -239,7 +239,7 @@
                         </li>
 
                         <li class="col-md-10 col-lg-6 mt-3 mt-md-0 pl-md-0">
-                            <a href="https://www.flandersinvestmentandtrade.com/en" target="_blank">
+                            <a href="https://fsc.org/en" target="_blank">
                                 <img src="../../static/assets/img/fsc-1.png" alt=""/>
                             </a>
                         </li>
@@ -299,7 +299,7 @@
                                     </a>
                                 </li>
                                 <li class="list-unstyled-item" style="height:48px;">
-                                    <a href="https://www.instagram.com/p/CXyaJw2Ihio/?utm_medium=share_sheet" style="color: #c69214;">
+                                    <a href="https://www.instagram.com/intopipe/" style="color: #c69214;">
                                         <i class="fab fa-instagram fa-2x"></i>
                                     </a>
                                 </li>
