--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -254,7 +254,7 @@
                         </li>
 
                         <li class="col-md-10 col-lg-6 mt-3 mt-md-0 pl-md-0">
-                            <a href="https://www.flandersinvestmentandtrade.com/en" target="_blank">
+                            <a href="https://fsc.org/en" target="_blank">
                                 <img src="../static/assets/img/fsc-1.png" alt=""/>
                             </a>
                         </li>
