--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -348,7 +348,7 @@
                                     </a>
                                 </li>
                                 <li class="list-unstyled-item" style="height:48px;">
-                                    <a href="https://www.instagram.com/p/CXyaJw2Ihio/?utm_medium=share_sheet" style="color: #c69214;">
+                                    <a href="https://www.instagram.com/intopipe/" style="color: #c69214;">
                                         <i class="fab fa-instagram fa-2x"></i>
                                     </a>
                                 </li>
