--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -111,7 +111,7 @@
 
 <div class="jumbotron banner-index text-center banner-top uppercase flex">
     <div class="container">
-        <h1 class="display-4 mb-3 glow text-info" style="font-family: 'UniviaProBold'; text-shadow: 0 0 20px black;"><br>Reasonable price, Excellent Quality, and Prompt Delivery
+        <h1 class="display-4 mb-3 glow" style="color: #c69214;  font-family: 'UniviaProBold'; text-shadow: 0 0 20px black;"><br>Reasonable price, Excellent Quality, and Prompt Delivery
         </h1>
         <br>
         <br>
@@ -219,7 +219,7 @@
                             <div class="row">
                                 <div class="col-lg-12"></div>
                                 <div class="col-lg-12">
-                                    <h2 class="display-4 mb-2 c-cta-double__title" style="color: #a5cd38;">
+                                    <h2 class="display-4 mb-2 c-cta-double__title" style="color: #c69214;">
                                         Please check out our catalogue!
                                     </h2>
                                     {% if  home_feature.button_text %}
@@ -331,6 +331,8 @@
                     </div> -->
                 </div>
 
+                
+
                 <div class="col-lg-3 mt-5 mt-md-0 order-3 order-md-2">
                     <img
                             class="img-fluid mx-auto d-block"
@@ -344,62 +346,145 @@
                     />
                 </div>
 
-                <div class=" order-2 order-md-3">
+
+                    
+                        
+                            <form method="POST" class = "form-horizontal col-12 order-2 d-md-none" style="background-color:#F9F9F9; padding-left: 0 !important; padding-right: 0 !important" id="form_order">
+                                <p class="mb-4 col-12 px-3 pt-3 text-justify">"We work together with some of the
+                                    world's biggest manufacturing industries
+                                    in the metal, paper, plastic and textile industries. Would you like our help with a
+                                    customised solution? Talk to us! / Make
+                                    your customized sample out!"</p>
+                                    <br>
+                                {% csrf_token %}
+                                <div class="form-row" style="padding-left: 0 !important; padding-right: 0 !important; margin-left: 0 !important; margin-right: 0 !important" >
+                                    <div class="mb-3 px-3 col-12">
+                                        <input type="text" class=" form-control rounded inputstl" id="name" name ="name" placeholder="Name:" required>
+                                    </div>
+            
+                                    <div class=" mb-3 px-3 col-12">
+                                        <input class="form-control rounded inputstl" type="email" name="email" placeholder="Email:">
+                                    </div>
+            
+                                    <div class=" mb-3 px-3 col-12">
+                                        <input type="text" class="form-control rounded inputstl" id="phone" name ="phone" placeholder="Phone Number:" >
+                                    </div>
+            
+                                    <div class="mb-3 px-3 col-12">
+                                            <input type="number" step="0.01" class="form-control rounded inputstl" id="inner_diameter" name ="inner_diameter" placeholder="Inner Diameter:" >
+                                    </div>
+                                    
+                                    <div class="mb-3 px-3 col-12"> 
+                                        <input type="number" step="0.01" class="form-control rounded inputstl" id="thickness" name ="thickness" placeholder="Thickness:" >
+                                    </div>
+            
+                                    <div class="mb-3 px-3 col-12">  
+                                         <input type="number" step="0.01" class="form-control rounded inputstl" id="length" name ="length" placeholder="Length:" >  
+                                    </div>
+            
+                                    <div class=" px-3 col-12">
+                                        <input type="number" class="form-control rounded inputstl" id="quantity" name ="quantity" placeholder="Quantity:" >
+                                    </div> 
+            
+                                    <div class="col-12 mb-3 mt-2 pt-3 d-flex" >
+                                        <span class="col-5"> Material Type:</span>
+                                        <select style="width:35vw" name="material" id="material" required >
+                                            {% for material in materials %}
+                                            <option value={{material.title}} selected>{{material.title}}</option>
+                                            {% endfor %}
+                                        </select>
+                                    </div>
+            
+                                    <div class="d-flex col-12 mb-3" >
+                                       <span class="col-5">Your LOGO:</span>
+                                        <input type="file" id="logo" name ="logo">
+                                    </div>
+                                </div>
+                                <div class="text-center mb-3 px-3 col-12">
+                                    <button type="submit" class="col-md-3 mb-3 btn btn-success rounded" style="text-transform: none; font-weight: 500;">Get a quote!</button> 
+                                </div>
+                            </form>    
+                        
+                    
+            
+
+                
+
+                <div class=" order-md-3 d-none d-md-block">
                     <form method="POST" class = "form-horizontal pt-4" style="background-color:#F9F9F9;" id="form_order">
+                        <p class="mb-4 px-3 col-12">"We work together with some of the
+                            world's biggest manufacturing industries
+                            in the metal, paper, plastic and textile
+                            industries. Would you like our help with a
+                            customised solution? Talk to us! / Make
+                            your customized sample out!"</p>
+                            <br>
                         {% csrf_token %}
                         <div class="form-row" style="margin: 0 !important;" >
                         
-                            <div class="col-md-6 mb-3 px-3">
-                                <input type="text" class="form-control rounded inputstl" id="name" name ="name" placeholder="Your Name:" required>
+                            <div class="d-flex align-items-center col-md-6 col-11 mb-3 px-3">
+                                <span class=" px-0 col-3 small">Name:</span>
+                                <input type="text" class="col-8 form-control rounded inputstl" id="name" name ="name" placeholder="" required>
                             </div>
 
-                            <div class="col-md-6 mb-3 px-3">
-                                <input class="form-control rounded inputstl" type="email" name="email" placeholder="Your Email:">
+                            <div class="d-flex align-items-center col-md-6 col-11 mb-3 px-3">
+                                <span class="px-0 col-3 small">Email:</span>
+                                <input class="col-8 form-control rounded inputstl" type="email" name="email" placeholder="">
                             </div>
     
-                            <div class="col-md-6 mb-3 px-3">
-                                <input type="text" class="form-control rounded inputstl" id="phone" name ="phone" placeholder="Your Phone Number:" >
+                            <div class="d-flex align-items-center col-md-6 col-11 mb-3 px-3">
+                                <span class="px-0 col-3 small">Phone Number:</span>
+                                <input type="text" class="col-8 form-control rounded inputstl" id="phone" name ="phone" placeholder="" >
                             </div>
 
-                            <div class="col-md-6 d-none d-md-block mb-3 px-3"></div>
-                             
-                            <div class="col-md-3 mb-3 px-3"> 
-                                <input type="number" step="0.01" class="form-control rounded inputstl" id="inner_diameter" name ="inner_diameter" placeholder="Inner Diameter:" >
-                            </div>
-
-                            <div class="col-md-3 mb-3 px-3">
-                                <input type="number" step="0.01" class="form-control rounded inputstl" id="thickness" name ="thickness" placeholder="Thickness:" >
-                            </div>
-
-                            <div class="col-md-3 mb-3 px-3">
-                                <input type="number" step="0.01" class="form-control rounded inputstl" id="length" name ="length" placeholder="Length:" >
-                            </div>
-
-                            <div class="col-md-3 mb-3 px-3">
-                                <input type="number" class="form-control rounded inputstl" id="quantity" name ="quantity" placeholder="Quantity:" >
-                            </div>
-                            
-
-                            
-                            <div class="col-md-6 mb-3 pt-4 pt-md-3  col-9 pl-3" style="box-sizing: border-box" >
-                                Material Type:
-                                <select style="width:80px" name="material" id="material" required >
+                            <div class="d-flex align-items-center col-md-6 col-11 mb-3 px-3" style="box-sizing: border-box" >
+                               <span class="px-0 col-3 small"> Material Type:</span>
+                                <select class="col-8 inputstl rounded" name="material" id="material" required >
                                     {% for material in materials %}
-                                    <option value={{material.title}} selected>{{material.title}}</option>
+                                    <option class="inputstl" value={{material.title}} selected>{{material.title}}</option>
                                     {% endfor %}
                                     
                                 </select>
                             </div>
-                            <div class="col-md-6 mb-3 pt-md-3 pt-4 pl-3">
-                               Your LOGO:
-                               <input class="col-8" type="file" id="logo" name ="logo">
+
+                             
+                            <div class="d-flex align-items-center col-md-6 col-11  mb-3 px-3"> 
+                                <span class="px-0 col-3 small">Inner Diameter:</span>
+                                <input type="number" step="0.01" class="col-8 form-control rounded inputstl" id="inner_diameter" name ="inner_diameter" placeholder="" >
+                            </div>
+
+                            <div class="d-flex align-items-center col-md-6 col-11  mb-3 px-3">
+                                <span class="px-0 col-3 small">Thickness:</span>
+                                <input type="number" step="0.01" class="col-8 form-control rounded inputstl" id="thickness" name ="thickness" placeholder="" >
+                            </div>
+
+                            <div class="d-flex align-items-center col-md-6 col-11  mb-3 px-3">
+                                <span class="px-0 col-3 small">Length:</span>
+                                <input type="number" step="0.01" class="col-8 form-control rounded inputstl" id="length" name ="length" placeholder="" >
+                            </div>
+
+                            <div class="d-flex align-items-center col-md-6 col-11  mb-3 px-3">
+                                <span class="px-0 col-3 small">Quantity:</span>
+                                <input type="number" class="form-control rounded inputstl col-8" id="quantity" name ="quantity" placeholder="" >
+                            </div>
+                            
+                            
+
+                            <div class="d-flex  col-md-6 col-11 mb-3 px-3 align-items-center">
+                               <span class="pl-0 col-3 small">Your LOGO:</span>
+                               <input class="mr-auto" type="file" id="logo" name ="logo">
+                            </div>
+
+                            <div class="text-center d-flex align-items-center col-md-6 col-11 mb-3 px-3">
+                                <span  class="px-0 col-3"></span>
+                                <button type="submit" class="col-8 btn btn-success rounded py-2" style="text-transform: none; font-weight: 500;">Get a quote!</button> 
                             </div>
                         </div>
 
-                        <div class="text-center mb-3 px-3">
+                        <!-- <div class="text-center mb-3 px-3">
                             <button type="submit" class="col-md-3 mb-3 btn btn-success rounded" style="text-transform: none; font-weight: 500;">Get a quote!</button> 
-                        </div>
-                    </form>    
+                        </div> -->
+                    </form> 
                 </div>
 
             </div>
@@ -439,65 +524,7 @@
         </div>
     </section>
 
-    <!-- <section class="py-md-5 pb-0 d-none d-md-block">
-        <div class="container">
-            <div class="row text-center d-block">
-                <form method="POST" class = 'form-horizontal' style="background-color:#F9F9F9;" id="form_order">
-                    {% csrf_token %}
-                    <div class="form-row " >
-                        <div class="col-md-6 mb-3 pt-5" >
-                            Material Type:
-                            <select style="width:80px" name="material" id="material" required >
-                                {% for material in materials %}
-                                <option value={{material.title}} selected>{{material.title}}</option>
-                                {% endfor %}
-                                
-                            </select>
-                        </div>
-                        <div class="col-md-6 mb-3 pt-5" >
-                            Your LOGO:
-                            <input type="file" id="logo" name ="logo">
-                        </div>
-                        <div class="col-md-6 mb-3 px-3">
-                            
-                            <input type="number" step="0.01" class="form-control" id="inner_diameter" name ="inner_diameter" placeholder="Inner Diameter:" >
-                        </div>
-                        <div class="col-md-6 mb-3 px-3">
-                            
-                            <input type="number" step="0.01" class="form-control" id="thickness" name ="thickness" placeholder="Thickness:" >
-                        </div>
-                        <div class="col-md-6 mb-3 px-3">
-                            
-                            <input type="number" step="0.01" class="form-control" id="length" name ="length" placeholder="Length:" >
-                        </div>
-                        <div class="col-md-6 mb-3 px-3">
-                            
-                            <input type="number" class="form-control" id="quantity" name ="quantity" placeholder="Quantity:" >
-                        </div>
-                        
-
-                        <div class="col-md-6 mb-3 px-3">
-                            
-                            <input type="text" class="form-control" id="name" name ="name" placeholder="Your Name:" required>
-                        </div>
-                        <div class="col-md-6 mb-3 px-3">
-                            
-                            <input class="form-control" type="email" name="email" placeholder="Your Email:">
-                        </div>
-
-                        <div class="col-md-6 mb-3 px-3">
-                            
-                            <input type="text" class="form-control" id="phone" name ="phone" placeholder="Your Phone Number:" >
-                        </div> 
-                    </div>
-                    <div class="text-center mb-3 px-3">
-                        <button type="submit" class="col-md-3 mb-3 btn btn-dark rounded" style="text-transform: none; font-weight: 500;">Get a quote!</button> 
-                    </div>
-                </form>    
-            </div>
-        </div>
-    </section> -->
-
+    
 
     <div class="py-3"></div>
 </main>
@@ -526,7 +553,7 @@
                         </li>
 
                         <li class="col-md-10 col-lg-6 mt-3 mt-md-0 pl-md-0">
-                            <a href="https://www.flandersinvestmentandtrade.com/en" target="_blank">
+                            <a href="https://fsc.org/en" target="_blank">
                                 <img src="../static/assets/img/fsc-1.png" alt=""/>
                             </a>
                         </li>
@@ -586,7 +613,7 @@
                                     </a>
                                 </li>
                                 <li class="list-unstyled-item" style="height:48px;">
-                                    <a href="https://www.instagram.com/p/CXyaJw2Ihio/?utm_medium=share_sheet" style="color: #c69214;">
+                                    <a href="https://www.instagram.com/intopipe/" style="color: #c69214;">
                                         <i class="fab fa-instagram fa-2x"></i>
                                     </a>
                                 </li>
