--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -396,7 +396,7 @@
                                     </div>
             
                                     <div class="d-flex col-12 mb-3" >
-                                       <span class="col-5">Your LOGO:</span>
+                                       <span class="col-5">Logo:</span>
                                         <input type="file" id="logo" name ="logo">
                                     </div>
                                 </div>
@@ -471,7 +471,7 @@
                             
 
                             <div class="d-flex  col-md-6 col-11 mb-3 px-3 align-items-center">
-                               <span class="pl-0 col-3 small">Your LOGO:</span>
+                               <span class="pl-0 col-3 small">Logo:</span>
                                <input class="mr-auto" type="file" id="logo" name ="logo">
                             </div>
 
