--- a/templates/pages/plastic_pipe.html
+++ b/templates/pages/plastic_pipe.html
@@ -171,19 +171,20 @@
                         <div id="carouselControls{{ forloop.counter }}" class="carousel slide d-flex bg-light rounded" style="height: 40vh;" data-ride="carousel"  data-interval="10000">
                             <div class="carousel-inner d-flex align-items-center">
                                 
-                              <div class="carousel-item active">
-                                <img class="img-fluid" alt="{{ product.title }}"
-                                        src="{{ product.images.first.image.url }}"/>
-                              </div>
-                              {% for image in product.images.all %}
-                              {% if image != product.images.first %}
-                              <div class="carousel-item">
-                                <img class="img-fluid" alt="{{ product.title }}" src="{{ image.image.url }}">
-                              </div>
-                              {% endif %}
-                              {% endfor %}
-                              
+                                <div class="carousel-item active">
+                                    <img class="img-fluid" alt="{{ product.title }}"
+                                            src="{{ product.images.first.image.url }}"/>
+                                </div>
+
+                                {% for image in product.images.all %}
+                                {% if image != product.images.first %}
+                                <div class="carousel-item">
+                                    <img class="img-fluid" alt="{{ product.title }}" src="{{ image.image.url }}">
+                                </div>
+                                {% endif %}
+                                {% endfor %}
                             </div>
+                            
                             <a class="carousel-control-prev" href="#carouselControls{{ forloop.counter }}" role="button" data-slide="prev">
                               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                               <span class="sr-only">Previous</span>
@@ -194,7 +195,7 @@
                             </a>
                           </div>
 
-                          <div class="mb-auto"></div>
+                          <div class="mb-auto">
                             <a href="{% url 'products:plastic-pipe-detail' slug=product.slug %}"><h2
                                 class="mt-4 bolder text-center">{{ product.title }}</h2></a>
                             <p class="thin text-justify">
