--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -475,10 +475,11 @@
                                <input class="mr-auto" type="file" id="logo" name ="logo">
                             </div>
 
-                            <div class="text-center d-flex align-items-center col-md-6 col-11 mb-3 px-3">
-                                <span  class="px-0 col-3"></span>
-                                <button type="submit" class="col-8 btn btn-success rounded py-2" style="text-transform: none; font-weight: 500;">Get a quote!</button> 
-                            </div>
+
+                        </div>
+                        <div class="text-center d-flex align-items-center mx-auto col-md-6 col-11 mb-3 px-3 pb-3">
+                            <span  class="px-0 col-3"></span>
+                            <button type="submit" class="col-8 btn btn-success rounded py-2" style="text-transform: none; font-weight: 500;">Get a quote!</button> 
                         </div>
 
                         <!-- <div class="text-center mb-3 px-3">
@@ -603,7 +604,7 @@
                             <ul class="d-flex flex-md-column col-6 col-md-12 m-auto list-unstyled align-items-center justify-content-between mb-0">
 
                                 <li class="list-unstyled-item" style="height:48px;">
-                                    <a href="https://www.linkedin.com/company/kindermanstradingabfa/" style="color: #c69214;">
+                                    <a href="https://www.linkedin.com/company/intopipe/" style="color: #c69214;">
                                         <i class="fab fa-linkedin-in fa-2x"></i>
                                     </a>
                                 </li>
