--- a/templates/pages/our-story.html
+++ b/templates/pages/our-story.html
@@ -116,7 +116,7 @@
                     <p><i class="fas fa-angle-right"></i></p>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Our Story</a>
+                    <a class="nav-link active" href="#">fffy</a>
                 </li>
             </ul>
         </div>
@@ -146,7 +146,9 @@
 </div>
 
 <main class="index">
+         <!-- این اضافه است. یک توی سایت واسه ی اینه -->
     <h2>{{ posts.count }}</h2>
+    
     <section class="pt-3 pb-5">
         <div class="container">
             {% for post in posts %}
@@ -255,7 +257,7 @@
                             <ul class="d-flex flex-md-column col-6 col-md-12 m-auto list-unstyled align-items-center justify-content-between mb-0">
 
                                 <li class="list-unstyled-item" style="height:48px;">
-                                    <a href="https://www.linkedin.com/company/kindermanstradingabfa/" style="color: #c69214;">
+                                    <a href="https://www.linkedin.com/company/intopipe/" style="color: #c69214;">
                                         <i class="fab fa-linkedin-in fa-2x"></i>
                                     </a>
                                 </li>
