--- a/templates/pages/paper_tube.html
+++ b/templates/pages/paper_tube.html
@@ -288,7 +288,7 @@
                             <ul class="d-flex flex-md-column col-6 col-md-12 m-auto list-unstyled align-items-center justify-content-between mb-0">
 
                                 <li class="list-unstyled-item" style="height:48px;">
-                                    <a href="https://www.linkedin.com/company/kindermanstradingabfa/" style="color: #c69214;">
+                                    <a href="https://www.linkedin.com/company/intopipe/" style="color: #c69214;">
                                         <i class="fab fa-linkedin-in fa-2x"></i>
                                     </a>
                                 </li>
