--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -276,7 +276,7 @@
                         </li>
 
                         <li class="nav-item col-4 pl-md-0">
-                            <a class="nav-link" href="{% url 'pages:about' %}">Our Story</a>
+                            <a class="nav-link" href="{% url 'posts:post_list' %}">Our Story</a>
                         </li>
 
                         <li class="nav-item col-4 pl-md-0">
