--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -475,18 +475,12 @@
                                <input class="mr-auto" type="file" id="logo" name ="logo">
                             </div>
 
-<<<<<<< HEAD
+
 
                         </div>
                         <div class="text-center d-flex align-items-center mx-auto col-md-6 col-11 mb-3 px-3 pb-3">
                             <span  class="px-0 col-3"></span>
                             <button type="submit" class="col-8 btn btn-success rounded py-2" style="text-transform: none; font-weight: 500;">Get a quote!</button> 
-=======
-                            <div class="text-center d-flex align-items-center col-md-6 col-11 mb-3 px-3">
-                                <span  class="px-0 col-3"></span>
-                                <button type="submit" class="col-8 btn btn-success rounded py-2" style="text-transform: none; font-weight: 500;">Get a quote!</button>
-                            </div>
->>>>>>> 82502224ed3f85c7a6d66893d43830e8adfd6ac2
                         </div>
 
                         <!-- <div class="text-center mb-3 px-3">
@@ -527,7 +521,7 @@
                     We produce packaging solutions and cardboard tubes for the consumer market for wholesalers and
                     private companies.
                 </p>
-                <a href="{% url 'pages:about' %}" class="btn btn-link ">Our Story</a>
+                <a href="{% url 'posts:post_list' %}" class="btn btn-link ">Our Story</a>
             </div>
         </div>
     </section>
@@ -549,7 +543,7 @@
                         </li>
 
                         <li class="nav-item col-4 pl-md-0">
-                            <a class="nav-link" href="{% url 'pages:about' %}">Our Story</a>
+                            <a class="nav-link" href="{% url 'posts:post_list' %}">Our Story</a>
                         </li>
 
                         <li class="nav-item col-4 pl-md-0">
