--- a/templates/pages/paper_tube.html
+++ b/templates/pages/paper_tube.html
@@ -77,7 +77,7 @@
                         >
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'pages:about' %}">our story</a>
+                        <a class="nav-link" href="{% url 'posts:post_list' %}">our story</a>
                     </li>
     
                     <li class="nav-item">
@@ -226,7 +226,7 @@
                         </li>
 
                         <li class="nav-item col-4 pl-md-0">
-                            <a class="nav-link" href="{% url 'pages:about' %}">Our Story</a>
+                            <a class="nav-link" href="{% url 'posts:post_list' %}">Our Story</a>
                         </li>
 
                         <li class="nav-item col-4 pl-md-0">
