youtube link, product in footer, color footer

--- a/templates/pages/metalic_pipe.html
+++ b/templates/pages/metalic_pipe.html
@@ -230,7 +230,7 @@
             <div class="row fonteFoter">
 
                 <div class="col-12 col-md-6 text-center text-md-left">
-                    <h3 class="text-info">INTOPIPE</h3>
+                    <h3 style="color:#c69214">INTOPIPE</h3>
                     <ul class="nav flex-column align-items-center align-items-md-start">
                         <li class="nav-item col-4 pl-md-0">
                             <a class="nav-link" href="{% url 'pages:homepage' %}">Homeland</a>
@@ -241,7 +241,15 @@
                         </li>
 
                         <li class="nav-item col-4 pl-md-0">
-                            <a class="nav-link" href="{% url 'products:metalic-pipe-list' %}">Products</a>
+                            <a class="nav-link" href="{% url 'products:paper-tube-list' %}">Paper Tube</a>
+                        </li>
+
+                        <li class="nav-item col-4 pl-md-0">
+                            <a class="nav-link" href="{% url 'products:plastic-pipe-list' %}">Plastic Pipe</a>
+                        </li>
+
+                        <li class="nav-item col-4 pl-md-0">
+                            <a class="nav-link" href="{% url 'products:metalic-pipe-list' %}">Metallic Pipe</a>
                         </li>
 
                         <li class="nav-item col-4 pl-md-0">
@@ -259,7 +267,7 @@
 
                 <div class="col-12 col-md-5">
                     <div class="col-sm-6 col-md-8 col-lg-6  text-center mx-auto">
-                        <h3 class="text-info">Contact Us</h3>
+                        <h3 style="color:#c69214">Contact Us</h3>
                         <ul class="nav flex-column">
                             <li class="nav-item pb-1">
                                 Luisenstraße 1a
@@ -304,7 +312,7 @@
                                     </a>
                                 </li>
                                 <li class="list-unstyled-item" style="height:48px;">
-                                    <a href="https://www.youtube.com/channel/UCPzITktBkAP1iYhCcngI_aw" style="color: #c69214;">
+                                    <a href="#" style="color: #c69214;">
                                         <i class="fab fa-youtube fa-2x"></i>
                                     </a>
                                 </li>
