--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -415,7 +415,7 @@
 
 
                 <div class=" order-md-3 d-none d-md-block">
-                    <form method="POST" class = "form-horizontal pt-4" style="background-color:#F9F9F9;" id="form_order">
+                    <form method="POST" class = "form-horizontal pt-4" style="background-color:#F9F9F9;" id="form_order2">
                         <p class="mb-4 px-3 col-12">"We work together with some of the
                             world's biggest manufacturing industries
                             in the metal, paper, plastic and textile
@@ -670,6 +670,12 @@
           alert("Thanks for sharing!");
     });
 });
+$(document).ready(function () {
+        let form = document.getElementById("form_order2");
+        form.addEventListener("submit", (e) => {
+          alert("Thanks for sharing!");
+    });
+})
 
 </script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
